use direct calls to set row height, fdo#61721

Change-Id: I3c19e00b8ad2bc649b8e499cc869e3a4c488c343